--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <nav><h2>Random Color Change 🔥</h2></nav>
+      <nav><h2>Random Color Change </h2></nav>
       <h1 id="h1" onclick="copyValue()">Color</h1>
       <input type="color" name="" id="inputBox" />
 
